# faloops

./: Cargo.toml  README.md  rustfmt.toml
src/: errors.rs  lib.rs  main.rs
