[package]
name = "faloops"
version = "0.2.1"
edition = "2024"
description = """
Counter-attack nonhuman bad actors that abuse Frequency-shift Keying and Phase-shift Keying in your human environment thusly soothing your temporal and occipital lobes.
"""

readme = "README.md"
homepage = "https://github.com/gabrielfalcao/faloops"
license = "GPL-3.0-or-later"
keywords = ["audio", "ofdm", "psk", "fsk", "temporal-lobe"]
authors = ["Gabriel DeMoura <gabrielteratos@gmail.com>"]
categories = ["science::neuroscience", "security", "multimedia::audio", "science", "science::bioinformatics"]

[lib]
name = "faloops"
path = "src/lib.rs"


[[bin]]
name = "faloops"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.43", features = ["derive", "env", "unicode", "wrap_help"] }
cpal = { version = "0.16.0", features = ["num-traits", "wasm-bindgen"] }
cpvc = { git = "https://github.com/gabrielfalcao/cpvc.git", version = "0.3.0" }
ctrlc = "3.4.7"
rand = { version = "0.9.2", features = ["unbiased"] }
rand_chacha = "0.9.0"
rand_core = "0.9.3"
